--- a/frontend/StakeLauncher.module.sass
+++ b/frontend/StakeLauncher.module.sass
@@ -1,4 +1,11 @@
 .StakeLauncher
+  .nav
+    background-color: #00000033
+    button
+      padding: 10px
+      &:not(:hover)
+        &::after
+          height: 0
   table
     td
       &:nth-child(2n)
