--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 html {
   background-image: radial-gradient(
     circle 975px at 2.6% 48.3%,
@@ -11,7 +16,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
-  padding: 10px;
+  /*padding: 10px;*/
   color: #ffffffdd;
 }
 
